--- a/sass/_animations.sass
+++ b/sass/_animations.sass
@@ -7,8 +7,31 @@
   100%
     margin-bottom: 0px
     opacity: 1
+// @keyframes fadeLeft
+//   0%
+//     opacity: 0
+//     margin-left: -400px
+//   10%
+//     opacity: 0
+//   100%
+//     margin-left: 0
+//     opacity: 1
+// @keyframes fadeRight
+//   0%
+//     opacity: 0
+//     margin-left: 300px
+//   10%
+//     opacity: 0
+//   100%
+//     margin-left: 0
+//     opacity: 1
+    
 
 
 .animation-fade-up
     animation: fadeUp 2s
+// .animation-fade-left
+//     animation: fadeLeft 2s
+// .animation-fade-right
+//     animation: fadeRight 2s
     
