--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -58,6 +58,14 @@
       border-radius: 1px
       cursor: pointer
       margin-right: 0.571rem
+    &--center
+      justify-content: center
+div
+  &.invalid
+    color: tomato
+input
+  &.invalid
+    border-bottom: 1px solid tomato
 .button-up
     opacity: 0
     position: fixed
