--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -19,7 +19,7 @@
   &__dialog
     position: relative
     max-width: 36.143rem
-    background: $dark url('../img/bg-lines.svg') no-repeat center
+    background: $dark url('../img/bg-lines.svg') no-repeat center / cover
     padding: 2.357rem 3.5rem 1.929rem 3.5rem
     color: $light
   &__close
@@ -32,6 +32,7 @@
     border: none
     margin: 12px
     cursor: pointer
+    outline: none
   &__title
     font-family: 'Yeseva one', cursive
     font-size: 1.357rem
@@ -43,7 +44,10 @@
     display: flex
     flex-direction: column
   &__input
-    margin-bottom: 3.2rem
+    &-group
+      display: flex
+      flex-direction: column
+      margin-bottom: 3.2rem
     &:last-of-type
       margin-bottom: -0.2rem
   &__policy
