--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -45,6 +45,7 @@
     max-width: 55rem
     margin: auto
   &__input-group
+    position: relative
     display: flex
     flex-direction: column
     flex-basis: 30%
