--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -6,6 +6,7 @@
     max-width: 63.071rem
     margin: auto
     padding: 2.5rem
+    padding-top: 1.1rem
     margin-bottom: 3.714rem
   &__title
     text-transform: uppercase
@@ -14,7 +15,6 @@
     font-weight: normal
     text-align: center
     margin-bottom: 3.214rem
-    margin-bottom: 0
   &__form
     display: flex
     flex-wrap: wrap
@@ -22,22 +22,24 @@
     max-width: 37.142rem
     margin: auto
   &__input
-    padding-top: 0.3rem
+    margin-top: -0.2rem
     &-group
+      position: relative
       display: flex
       flex-direction: column
-      flex-basis: 45%
-      margin-bottom: 3.2rem
+      flex-basis: 44.2%
+      margin-bottom: 3.1rem
       &--full-width
         flex-basis: 100%
-        margin-bottom: 2rem
+        margin-bottom: 1.9rem
   &__policy
     flex-basis: 100%
     margin-bottom: 3.6rem
     // font-size: 1.142rem
   &__button
     margin: auto
-    padding: 1.286rem 4.786rem
+    padding: 1.23rem 4.25rem
+    font-size: 1.071rem
   &__menu
     background-color: $dark
     padding: 4.286rem 0
