--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -45,6 +45,7 @@
     flex-direction: column
   &__input
     &-group
+      position: relative
       display: flex
       flex-direction: column
       margin-bottom: 3.2rem
