--- a/sass/templates/_design.sass
+++ b/sass/templates/_design.sass
@@ -18,9 +18,8 @@
   &__card
     position: relative
   &__text
-    display: inline-block
     max-width: 53.571rem
-    margin: 1.3rem 0 3.22rem 0
+    margin: 1.3rem auto 3.22rem auto
     text-align: center
     font-size: 1.429rem
     line-height: 1.929rem
