--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -13,6 +13,7 @@
   &__title
     font-family: 'Yeseva One', cursive
     font-size: 1.29rem
+    line-height: 1.786rem
     margin-top: 0
     margin-bottom: 0.7rem
   &__list
