--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -43,3 +43,38 @@
   &__menu
     background-color: $dark
     padding: 4.286rem 0
+  &__map
+    margin: 0 auto
+    margin-bottom: 4rem
+    max-width: 66.071rem
+    min-height: 33.214rem
+.contacts
+  &-info
+    display: block
+    max-width: 38rem
+    margin: 0 auto
+    font-size: 1.429rem
+    line-height: 2rem
+    font-family: 'Yeseva One', cursive
+    font-weight: normal
+    color: $primary
+    text-transform: uppercase
+    text-align: center
+    &__text
+    &__adress
+      display: block
+    &__phone
+      color: $primary
+      text-decoration: none
+      cursor: pointer
+    &__text-phone
+      display: block
+      margin-bottom: 1.65rem
+    &__social
+      margin-bottom: 2.5rem
+    &__instagram
+      text-decoration: none
+    &__email 
+      margin-right: 0.65rem
+      text-decoration: none
+    
