--- a/sass/templates/_team.sass
+++ b/sass/templates/_team.sass
@@ -41,7 +41,7 @@
       padding: 0
   &__row
     margin-bottom: 3.8rem
-    justify-content: space-around
+    justify-content: space-between
 .card
   &__icon
     position: absolute
