--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -443,8 +443,34 @@
         &:nth-child(3)
           margin-top: -0.25rem
   .footer
+    &__wrap
+      margin-bottom: 1.4rem
     &__form
       max-width: 28.333rem
+    &__map
+      order: -2
+      max-width: 28.333rem
+      min-height: 21.25rem
+      margin-bottom: 3.3rem
+    &__menu
+      display: none
+  .contacts
+    &-info
+      &__text
+        max-width: 27rem
+        font-size: 1.5rem
+        line-height: 2.083rem
+        margin-bottom: 2rem
+      &__email 
+        margin-left: 0.2rem
+        margin-right: 1.55rem
+        img
+          width: 3.25rem
+          height: 3.25rem
+      &__instagram 
+        img
+          width: 3.25rem
+          height: 3.25rem
 @media screen and ( max-height: 530px )
   .hero
     &__scroll-down
