--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -7,7 +7,7 @@
     margin: auto
     padding: 2.5rem
     padding-top: 1.1rem
-    margin-bottom: 3.714rem
+    margin-bottom: 3.55rem
   &__title
     text-transform: uppercase
     font-family: 'Yeseva One', cursive
@@ -43,38 +43,39 @@
   &__menu
     background-color: $dark
     padding: 4.286rem 0
+  &__info
+    display: flex
+    flex-direction: column
+    align-items: center
   &__map
-    margin: 0 auto
-    margin-bottom: 4rem
+    margin-bottom: 3.85rem
+    width: 100%
     max-width: 66.071rem
     min-height: 33.214rem
 .contacts
   &-info
-    display: block
-    max-width: 38rem
-    margin: 0 auto
-    font-size: 1.429rem
-    line-height: 2rem
-    font-family: 'Yeseva One', cursive
-    font-weight: normal
-    color: $primary
-    text-transform: uppercase
-    text-align: center
     &__text
-    &__adress
-      display: block
+      max-width: 38rem
+      font-size: 1.429rem
+      line-height: 2rem
+      font-family: 'Yeseva One', cursive
+      font-weight: normal
+      color: $primary
+      text-transform: uppercase
+      text-align: center
+      margin: 0 auto
+      margin-bottom: 1.6rem
     &__phone
       color: $primary
       text-decoration: none
       cursor: pointer
-    &__text-phone
-      display: block
-      margin-bottom: 1.65rem
     &__social
-      margin-bottom: 2.5rem
+      text-align: center
+      margin-bottom: 2.8rem
     &__instagram
       text-decoration: none
     &__email 
-      margin-right: 0.65rem
+      margin-left: -0.3rem
+      margin-right: 0.7rem
       text-decoration: none
     
