--- a/css/style.css
+++ b/css/style.css
@@ -1383,6 +1383,67 @@ img {
   align-self: flex-end;
 }
 
+.thanks {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  z-index: 299;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(19, 19, 19, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.thanks--visible {
+  opacity: 1;
+  visibility: visible;
+}
+
+.thanks__dialog {
+  position: relative;
+  max-width: 36.143rem;
+  background: #131313 url("../img/bg-lines.svg") no-repeat center/cover;
+  padding: 2.5rem 4rem;
+}
+
+.thanks__close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 20px;
+  height: 20px;
+  background: transparent url("../img/close.svg") no-repeat center/cover;
+  border: none;
+  margin: 12px;
+  cursor: pointer;
+  outline: none;
+}
+
+.thanks__text {
+  margin: 0;
+  font-size: 1.2rem;
+  font-weight: normal;
+  text-align: center;
+  color: #E3B873;
+}
+
+.thanks__group {
+  margin: 0;
+  margin-top: 0.5rem;
+  text-align: center;
+  color: #ffffff;
+}
+
+.thanks__VK {
+  color: #ffffff;
+}
+
 @-webkit-keyframes fadeUp {
   0% {
     margin-bottom: -1000px;
