--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,6 +13,7 @@
 @import 'templates/team'
 @import 'templates/footer'
 @import 'templates/modal'
+@import 'templates/thanks'
 @import 'animations'
 
 @import 'media'
