--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -51,4 +51,8 @@ img
         width: 32px
         height: 2px
         background-color: $primary
+    &__description
+      font-family: 'Futura Demi', sans-serif
+      font-size: 1.071rem
+      line-height: 1.5rem
       
