--- a/sass/templates/_projects.sass
+++ b/sass/templates/_projects.sass
@@ -27,16 +27,13 @@
       line-height: 1.2rem
       &--margin
         margin-top: 0.3rem
-    &-img
-      &-mobile
-        display: none
   &-pagination
     &-bullet
       width: 10px
       height: 10px
       background-color: rgba($light, 0.3)
       &-active
-        background-color: $light
+        background-color: rgba($light, 0.7)
   &-button
     &-prev, &-next
       bottom: 0
@@ -57,8 +54,6 @@
 .projects
   padding-bottom: 29.5rem
   &__row
-    min-height: 35rem
-    max-height: 40rem
     flex-direction: column
     flex-wrap: wrap
     justify-content: center
