--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -13,6 +13,7 @@
   display: flex
   align-items: center
   justify-content: center
+  overflow: scroll
   &--visible
     opacity: 1
     visibility: visible
